--- a/background.html
+++ b/background.html
@@ -13,7 +13,8 @@
       <a href="index.html" class="_self">Home</a> |
       <a href="background.html" target="here">Background</a> |
       <a href="work.html" target="_self">Current Work</a> |
-      <a href="hobbies.html" target="_self">Interests and Hobbies</a>
+      <a href="hobbies.html" target="_self">Interests and Hobbies</a> |
+      <a href="testimonials.html" target="_self">Testimonials</a>
     </nav>
   </header>
   <main class=wrapper>
@@ -46,7 +47,7 @@
           <td>Arlington, Virginia</td>
         </tr>
         <tr>
-          <td>2020-2021</td>
+          <td>2021-2022</td>
           <td>Greensboro, North Carolina</td>
         </tr>
       </table>
