--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <a href="index.html" class="here">Home</a> |
       <a href="background.html" target="_self">Background</a> |
       <a href="work.html" target="_self">Current Work</a> |
-      <a href="hobbies.html" target="_self">Interests and Hobbies</a>
+      <a href="hobbies.html" target="_self">Interests and Hobbies</a> |
+      <a href="testimonials.html" target="_self">Testimonials</a>
     </nav>
   </header>
   <main class=wrapper>
