--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Piper Revell Lincoln</title>
   <link rel="stylesheet" type="text/css" href="CSS/style.css" />
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.5.0/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
