Adding form to submit testimonial

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Piper Revell Lincoln</title>
+  <script src="JS/username.js"></script>
   <link rel="stylesheet" type="text/css" href="CSS/style.css" />
 </head>
 <body>
@@ -14,6 +15,7 @@
       <a href="background.html" target="_self">Background</a> |
       <a href="work.html" target="_self">Current Work</a> |
       <a href="hobbies.html" target="_self">Interests and Hobbies</a> |
+      <a href="traveling.html" target="_self">Traveling</a> |
       <a href="testimonials.html" target="_self">Testimonials</a>
     </nav>
   </header>
@@ -26,7 +28,7 @@
     </section>
     <!-- Include some of my relevant technical background. -->
     <section class="item-b">
-      <h2>Welcome to My Profile</h2>
+      <h2 id="username"></h2>
       <p>
         Hello! My name is Piper Revell Lincoln and I am a graduate student at
         Boston University currently pursuing my MS in Software Development. I am
