--- a/hobbies.html
+++ b/hobbies.html
@@ -14,6 +14,7 @@
       <a href="background.html" target="_self">Background</a> |
       <a href="work.html" target="_self">Current Work</a> |
       <a href="hobbies.html" target="here">Interests and Hobbies</a> |
+      <a href="traveling.html" target="_self">Traveling</a> |
       <a href="testimonials.html" target="_self">Testimonials</a>
     </nav>
   </header>
