Add SW movie tooltips and stock ticker

--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Interests and Hobbies</title>
+  <script src="JS/starwars.js"></script>
   <link rel="stylesheet" type="text/css" href="CSS/style.css" />
 </head>
 <body>
@@ -24,17 +25,28 @@
       <h2>Hobbies by the Numbers</h2>
       <h3>Star Wars Movie Ranking</h3>
       <ol>
-        <li>Revenge of the Sith</li>
-        <li>Empire Strikes Back</li>
-        <li>Return of the Jedi</li>
-        <li>Rogue One</li>
-        <li>A New Hope</li>
-        <li>The Force Awakens</li>
-        <li>Attack of the Clones</li>
-        <li>The Last Jedi</li>
-        <li>Solo</li>
-        <li>Rise of Skywalker</li>
-        <li>Phantom Menace</li>
+        <li class="movie" id="first-movie">Revenge of the Sith</li>
+        <p class="popup" id="first-popup">Released: 2005<br>Directed By: George Lucas</p>
+        <li class="movie" id="second-movie">Empire Strikes Back</li>
+        <p class="popup" id="second-popup">Released: 1980<br>Directed By: Irvin Kershner</p>
+        <li class="movie" id="third-movie">Return of the Jedi</li>
+        <p class="popup" id="third-popup">Released: 1983<br>Directed By: Richard Marquand</p>
+        <li class="movie" id="fourth-movie">Rogue One</li>
+        <p class="popup" id="fourth-popup">Released: 2016<br>Directed By: Gareth Edwards</p>
+        <li class="movie" id="fifth-movie">A New Hope</li>
+        <p class="popup" id="fifth-popup">Released: 1977<br>Directed By: George Lucas</p>
+        <li class="movie" id="sixth-movie">The Force Awakens</li>
+        <p class="popup" id="sixth-popup">Released: 2015<br>Directed By: J.J. Abrams</p>
+        <li class="movie" id="seventh-movie">Attack of the Clones</li>
+        <p class="popup" id="seventh-popup">Released: 2002<br>Directed By: George Lucas</p>
+        <li class="movie" id="eighth-movie">The Last Jedi</li>
+        <p class="popup" id="eighth-popup">Released: 2017<br>Directed By: Rian Johnson</p>
+        <li class="movie" id="ninth-movie">Solo</li>
+        <p class="popup" id="ninth-popup">Released: 2018<br>Directed By: Ron Howard</p>
+        <li class="movie" id="tenth-movie">Rise of Skywalker</li>
+        <p class="popup" id="tenth-popup">Released: 2019<br>Directed By: J.J. Abrams</p>
+        <li class="movie" id="eleventh-movie">Phantom Menace</li>
+        <p class="popup" id="eleventh-popup">Released: 1999<br>Directed By: George Lucas</p>
       </ol>
       <h3>Traveling</h3>
       <table>
