--- a/work.html
+++ b/work.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Current Work</title>
+  <script src="JS/stocks.js"></script>
   <link rel="stylesheet" type="text/css" href="CSS/style.css" />
 </head>
 <body>
@@ -22,6 +23,7 @@
     <!-- Introduce my work and responsibilities. -->
     <section class="item-a">
       <h2>My Work</h2>
+      <p>General Dynamics Current Stock Price: <span id="gd-stock"></span></p>
       <p>
         I am the Post Mission Analysis Lead for the Knifefish program at General
         Dynamics Mission Systems. We operate in the Agile Scrum framework, and
@@ -30,7 +32,7 @@
         software development work alongside my team. For more information on the
         program, visit the website below.
       </p>
-      <br><br>
+      <br>
       <a href="https://gdmissionsystems.com/underwater-vehicles/knifefish-unmanned-undersea-vehicle" class="button">Knifefish Website</a>
     </section>
     <!-- Discuss the skills I have developed and lessons I have learned. -->
