Add linking to background table

--- a/background.html
+++ b/background.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Background</title>
+  <script src="JS/linking.js"></script>
   <link rel="stylesheet" type="text/css" href="CSS/style.css" />
 </head>
 <body>
@@ -27,34 +28,46 @@
           <th>Time Period</th>
           <th>Location</th>
         </tr>
-        <tr>
+        <tr id="row-1">
           <td>1998-2012</td>
-          <td>Eagan, Minnesota</td>
+          <td>
+            <a>Eagan, Minnesota</a>
+          </td>
         </tr>
-        <tr>
+        <tr id="row-2">
           <td>2012-2016</td>
-          <td>Eden Prairie, Minnesota</td>
+          <td>
+            <a>Eden Prairie, Minnesota</a>
+          </td>
         </tr>
-        <tr>
+        <tr id="row-3">
           <td>2016-2020</td>
-          <td>Madison, Wisconsin</td>
+          <td>
+            <a>Madison, Wisconsin</a>
+          </td>
         </tr>
-        <tr>
+        <tr id="row-4">
           <td>2019</td>
-          <td>Budapest, Hungary</td>
+          <td>
+            <a>Budapest, Hungary</a>
+          </td>
         </tr>
-        <tr>
+        <tr id="row-5">
           <td>2020-2021</td>
-          <td>Arlington, Virginia</td>
+          <td>
+            <a>Arlington, Virginia</a>
+          </td>
         </tr>
-        <tr>
+        <tr id="row-6">
           <td>2021-2022</td>
-          <td>Greensboro, North Carolina</td>
+          <td>
+            <a>Greensboro, North Carolina</a>
+          </td>
         </tr>
       </table>
     </section>
     <!-- Describe each place I lived and include a picture. -->
-    <section>
+    <section id="section-1">
       <img class="background-image" src="images/HighSchool.png" alt="Graduating High School" width="300" height="400">
       <h2>Minnesota</h2>
       <p>
@@ -68,7 +81,7 @@
         on a new adventure to college in Madison, Wisconsin.
       </p>
     </section>
-    <section>
+    <section id="section-2">
       <img class="background-image" src="images/College.png" alt="Graduating College" width="300" height="400">
       <h2>Wisconsin</h2>
       <p>
@@ -87,7 +100,7 @@
         and I wouldn't trade them for the world.
       </p>
     </section>
-    <section>
+    <section id="section-3">
       <img  class="background-image" src="images/StudyAbroad.png" alt="Exploring Budapest" width="300" height="400">
       <h2>Hungary</h2>
       <p>
@@ -101,7 +114,7 @@
         I chose Budapest as my home base. It will always have a special place in my heart.
       </p>
     </section>
-    <section>
+    <section id="section-4">
       <img class="background-image" src="images/Virginia.png" alt="Washington Monument and Cherry Blossoms" width="300" height="400">
       <h2>Virginia</h2>
       <p>
@@ -118,7 +131,7 @@
         parks, delicious food, and world-class museums.
       </p>
     </section>
-    <section>
+    <section id="section-5">
       <img class="background-image" src="images/NorthCarolina.png" alt="Hiking at Hanging Rock" width="300" height="400">
       <h2>North Carolina</h2>
       <p>
