Adding more testimonial validation

--- a/testimonials.html
+++ b/testimonials.html
@@ -54,6 +54,7 @@
         <section>
           <label for="testimonial">Testimonial:</label><br>
           <input type="text" id="testimonial" name="testimonial"><br>
+          <small class="error-text"></small><br>
         </section>
         <!-- Create the submission button. -->
         <section>
