Adding interactive travel map with pictures

--- a/background.html
+++ b/background.html
@@ -14,6 +14,7 @@
       <a href="index.html" class="_self">Home</a> |
       <a href="background.html" target="here">Background</a> |
       <a href="work.html" target="_self">Current Work</a> |
+      <a href="pastwork.html" target="_self">Past Work</a> |
       <a href="hobbies.html" target="_self">Interests and Hobbies</a> |
       <a href="traveling.html" target="_self">Traveling</a> |
       <a href="testimonials.html" target="_self">Testimonials</a>
