--- a/testimonials.html
+++ b/testimonials.html
@@ -18,6 +18,7 @@
       <a href="index.html" class="_self">Home</a> |
       <a href="background.html" target="_self">Background</a> |
       <a href="work.html" target="_self">Current Work</a> |
+      <a href="pastwork.html" target="_self">Past Work</a> |
       <a href="hobbies.html" target="_self">Interests and Hobbies</a> |
       <a href="traveling.html" target="_self">Traveling</a> |
       <a href="resume.html" target="here">Testimonials</a>
