Adding Vue component

--- a/pastwork.html
+++ b/pastwork.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Current Work</title>
-  <script src="JS/stocks.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="JS/photogallery.js" type="module"></script>
   <link rel="stylesheet" type="text/css" href="CSS/style.css" />
 </head>
 <body>
@@ -20,13 +21,8 @@
       <a href="testimonials.html" target="_self">Testimonials</a>
     </nav>
   </header>
-  <main class=wrapper>
-    <section class="item-a">
-      <h1>Placeholder for Vue Photo Gallery</h1>
-      <!-- https://wipac.wisc.edu/science/projects/icecube
-      https://cnerg.github.io/
-      https://gdmissionsystems.com/shipboard-integration-and-combat-systems/tactical-control-systems -->
-    </section>
+  <main>
+    <section id="app"></section>
   </main>
   <footer class="marginals"><b>Copyright @2021 Piper Lincoln All Rights Reserved</b></footer>
 </body>
