Cleaning up HTML syntax

--- a/traveling.html
+++ b/traveling.html
@@ -25,6 +25,7 @@
     </nav>
   </header>
   <main class=wrapper>
+    <!-- Create the section to display the map. -->
     <section class="item-a">
       <h2>My Favorite European Cities</h2>
       <section id="map" class="map"></section>
@@ -33,10 +34,11 @@
         <div id="popup-content"></div>
       </div>
     </section>
+    <!-- Create the section to display the images of the cities. -->
     <section class="item-b">
       <h2>Interactive Picture Gallery</h2>
       <h3 id="default-text">Click on a City to See a Picture</h3>
-      <img id="city-image" alt="Star Wars Characters" width="625" height="500">
+      <img id="city-image" src="images/Clouds.png" alt="Image of a European City" width="625" height="500">
     </section>
   </main>
   <footer class="marginals"><b>Copyright @2021 Piper Lincoln All Rights Reserved</b></footer>
