--- a/pastwork.html
+++ b/pastwork.html
@@ -22,6 +22,7 @@
     </nav>
   </header>
   <main>
+    <!-- Create the section for the Vue application. -->
     <section id="app"></section>
   </main>
   <footer class="marginals"><b>Copyright @2021 Piper Lincoln All Rights Reserved</b></footer>
